# story-mvp

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  DONE.md  README.md  TOBEDECIDED.md  TODO.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
assets/: story.json
assets/audio/: manifest.json
assets/schemas/: story_schema.json
assets/stories/: bayanpses_pages.json  baykut.json  baykut2.json  cat.json  cenk.json  cingo.json  ginger_the_giraffe.json  kucuk_bayan_prenses.json  little_blue.json  manifest.json  pses_new.json  the_wanderers_chronicle.json
assets/vosk_models/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: audio_controller.dart  story_controller.dart
lib/models/: scanned_book_model.dart  story_models.dart
lib/screens/: book_creator_screen.dart  book_editor_screen.dart  story_screen.dart
lib/services/: api_key_service.dart  audio_cache_io.dart  audio_cache_service.dart  audio_cache_web.dart  book_scanner_service.dart  book_sharing_service.dart  deepgram_speech_service.dart  elevenlabs_service.dart  gemini_analyzer_service.dart  speech_service.dart  story_validator.dart  vosk_grammar_builder.dart  vosk_speech_service.dart  vosk_speech_service_interface.dart  vosk_speech_service_stub.dart
lib/utils/: fuzzy_matcher.dart
lib/widgets/: interactive_text_widget.dart  (+3 more)
linux/: CMakeLists.txt
test/: widget_test.dart
tools/: analyze_book.py  check_story_vocab.py  docker-compose.yml  merge_audio_runtime.py  prewarm_audio.dart  prewarm_audio.py
web/: index.html
(+13 files in other folders)
