[project]
name = "story-tools"
version = "0.1.0"
description = "Python tooling for the Story app — book analysis and audio generation"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "Pillow>=10.0.0",
    "jsonschema>=4.23.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
